--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <h1>Hello Git</h1>
+    <form>
+        <input type="email" placeholder="Enter your Email"/>
+        <input type="passowrd" placeholder="Enter your Password"/>
+        <input type="submit" value="Login"/>
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
