Added link to GitHub

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Weather App</title>
   </head>
   <body>
-<div class="container">
+    <div class="container">
       <div class="row">
         <div class="col-8">
           <form id="search-form">
@@ -98,7 +98,14 @@
         </div>
       </div>
     </div>
+    <h4>
+      This project was coded with 🧁 by
+      <a href="https://lilypadiachy.co.za/" target="_blank">Lily Padiachy</a>
+      and is open-sourced on
+      <a href="https://github.com/lilypadiachy/new-weather-app" target="_blank"
+        >GitHub</a
+      >
+    </h4>
     <script src="index.js"></script>
-    <footer>This Weather App is Coded with 🧁 by Lily</footer>
   </body>
 </html>
